Revert "Cleanup, no functional changes"